Constant Evaluation of Geometry Node Tree When Viewer node + Spreadsheet + Modifier present together #96085

Closed
opened 2022-02-28 23:42:34 +01:00 by Gerstmann Bradley · 8 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-27 21:16, hash: 63891f9dad
Also version: 3.1.0 Beta, branch: master, commit date: 2022-02-26 20:56, hash: 4ee4b61dd8

Short description of error
[Lag].mp4
Somehow this issue can't be reproduced in 100% factory setting, while I think I've simplified this particular file as much as the one in factory setting.
[Lag].blend

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-27 21:16, hash: `63891f9dad` Also version: 3.1.0 Beta, branch: master, commit date: 2022-02-26 20:56, hash: `4ee4b61dd8` **Short description of error** [[Lag].mp4](https://archive.blender.org/developer/F12891604/_Lag_.mp4) Somehow this issue can't be reproduced in 100% factory setting, while I think I've simplified this particular file as much as the one in factory setting. [[Lag].blend](https://archive.blender.org/developer/F12891605/_Lag_.blend)

Added subscriber: @Bradley_G

Added subscriber: @Bradley_G

Added subscribers: @HooglyBoogly, @iss

Added subscribers: @HooglyBoogly, @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I was able to reproduce with factory settings.

CC @HooglyBoogly

I was able to reproduce with factory settings. CC @HooglyBoogly
Jacques Lucke self-assigned this 2022-03-01 13:42:12 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Tagging 3.1 since this seems critical to get fixed before release.

Tagging 3.1 since this seems critical to get fixed before release.

This issue was referenced by 4a95c3466f

This issue was referenced by 4a95c3466fafcd3e9116cd0d7fdcc63f2dc38bd2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96085
No description provided.