Fix T96085: repeated evaluation of geometry nodes when nothing changed

Differential Revision: https://developer.blender.org/D14216