source/blender/editors/space_spreadsheet/spreadsheet_context.cc
@@ -465,9 +465,7 @@ bool ED_spreadsheet_context_path_is_active(const bContext *C, SpaceSpreadsheet *
   if (modifier == nullptr) {
     return false;
   }
-  if (!(modifier->flag & eModifierFlag_Active)) {
-    return false;
-  }
+  const bool modifier_is_active = modifier->flag & eModifierFlag_Active;
   if (modifier->type != eModifierType_Nodes) {
     return false;
   }
@@ -493,6 +491,12 @@ bool ED_spreadsheet_context_path_is_active(const bContext *C, SpaceSpreadsheet *
       SpaceNode *snode = (SpaceNode *)sl;
       if (snode->nodetree != root_node_tree) {
         continue;
+      }
+      if (!modifier_is_active) {
+        if (!(snode->flag & SNODE_PIN)) {
+          /* Node tree has to be pinned when the modifier is not active. */
+          continue;
+        }
       }
       if (snode->id != &object->id) {
         continue;
